generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

//////////////////////////////////////////////////////
// ENUMS
//////////////////////////////////////////////////////

enum UserRole {
  ADMIN
  OPERATOR
  STAFF
  USER
}

enum OperatorStatus {
  ACTIVE
  SUSPENDED
}

enum Gender {
  MALE
  FEMALE
  OTHER
}

enum BusType {
  AC
  NON_AC
  SLEEPER
}

enum BusClass {
  BUSINESS
  ECONOMY
}

enum BusStatus {
  ACTIVE
  INACTIVE
  MAINTENANCE
}

enum TripStatus {
  SCHEDULED
  COMPLETED
  CANCELLED
}

enum BookingStatus {
  PENDING
  CONFIRMED
  CANCELLED
  EXPIRED
}

enum BookingSeatStatus {
  LOCKED
  RESERVED
  CANCELLED
}

enum PaymentMethod {
  BKASH
  NAGAD
  CARD
}

enum PaymentStatus {
  PENDING
  SUCCESS
  FAILED
  REFUNDED
}

enum RefundStatus {
  PENDING
  APPROVED
  REJECTED
  FAILED
}

//////////////////////////////////////////////////////
// OPERATOR
//////////////////////////////////////////////////////

model Operator {
  id          String         @id @default(cuid())
  companyName String         @unique
  slug        String         @unique
  logo        String?
  email       String?
  phone       String?
  address     String?
  description String?
  status      OperatorStatus @default(ACTIVE)

  users    User[]
  buses    Bus[]
  routes   Route[]
  trips    Trip[]
  bookings Booking[]
  payments Payment[]
  refunds  Refund[]
  boardingPoints BoardingPoint[]
  droppingPoints DroppingPoint[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([status])
  @@index([slug])
}

//////////////////////////////////////////////////////
// USER
//////////////////////////////////////////////////////

model User {
  id                   String    @id @default(cuid())
  fullName             String
  email                String    @unique
  passwordHash         String
  phoneNumber          String?
  gender               Gender?
  address              String?
  dateOfBirth          DateTime?
  nationalId           String?
  passportNumber       String?
  visaInfo             String?
  role                 UserRole  @default(USER)
  operatorId           String?
  refreshTokenHash     String?
  resetPasswordToken   String?
  resetPasswordExpires DateTime?

  operator Operator? @relation(fields: [operatorId], references: [id], onDelete: Cascade)
  bookings Booking[]
  payments Payment[]
  refunds  Refund[]

  busesCreated       Bus[]         @relation("BusCreatedBy")
  busesUpdated       Bus[]         @relation("BusUpdatedBy")
  routesCreated      Route[]       @relation("RouteCreatedBy")
  routesUpdated      Route[]       @relation("RouteUpdatedBy")
  tripsCreated       Trip[]        @relation("TripCreatedBy")
  tripsUpdated       Trip[]        @relation("TripUpdatedBy")
  bookingsCreated    Booking[]     @relation("BookingCreatedBy")
  bookingsUpdated    Booking[]     @relation("BookingUpdatedBy")
  paymentsCreated    Payment[]     @relation("PaymentCreatedBy")
  paymentsUpdated    Payment[]     @relation("PaymentUpdatedBy")
  refundsCreated     Refund[]      @relation("RefundCreatedBy")
  refundsUpdated     Refund[]      @relation("RefundUpdatedBy")
  bookingSeatsLocked BookingSeat[] @relation("BookingSeatLockedBy")

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([operatorId])
  @@index([role])
}

//////////////////////////////////////////////////////
// BUS
//////////////////////////////////////////////////////

model Bus {
  id                 String    @id @default(cuid())
  name               String
  operatorId         String
  registrationNumber String    @unique
  seatCapacity       Int
  busType            BusType
  busClass           BusClass  @default(ECONOMY)
  status             BusStatus @default(ACTIVE)

  operator Operator @relation(fields: [operatorId], references: [id])
  seats    Seat[]
  trips    Trip[]

  createdById String?
  updatedById String?
  createdBy   User?   @relation("BusCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?   @relation("BusUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([operatorId])
  @@index([operatorId, status])
  @@index([createdById])
  @@index([updatedById])
}

//////////////////////////////////////////////////////
// ROUTE
//////////////////////////////////////////////////////

model Route {
  id          String @id @default(cuid())
  operatorId  String
  origin      String
  destination String

  operator Operator @relation(fields: [operatorId], references: [id])
  trips    Trip[]
  boardingPoints BoardingPoint[]
  droppingPoints DroppingPoint[]

  createdById String?
  updatedById String?
  createdBy   User?   @relation("RouteCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?   @relation("RouteUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([operatorId, origin, destination])
  @@index([operatorId])
  @@index([origin, destination])
  @@index([createdById])
  @@index([updatedById])
}

//////////////////////////////////////////////////////
// BOARDING POINT
//////////////////////////////////////////////////////

model BoardingPoint {
  id         String @id @default(cuid())
  operatorId String
  routeId    String

  name    String
  address String
  isActive Boolean @default(true)

  operator Operator @relation(fields: [operatorId], references: [id])
  route    Route    @relation(fields: [routeId], references: [id], onDelete: Cascade)
  bookings Booking[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([routeId, name])
  @@index([operatorId])
  @@index([routeId])
  @@index([isActive])
}

//////////////////////////////////////////////////////
// DROPPING POINT
//////////////////////////////////////////////////////

model DroppingPoint {
  id         String @id @default(cuid())
  operatorId String
  routeId    String

  name    String
  address String
  isActive Boolean @default(true)

  operator Operator @relation(fields: [operatorId], references: [id])
  route    Route    @relation(fields: [routeId], references: [id], onDelete: Cascade)
  bookings Booking[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([routeId, name])
  @@index([operatorId])
  @@index([routeId])
  @@index([isActive])
}

//////////////////////////////////////////////////////
// TRIP
//////////////////////////////////////////////////////

model Trip {
  id            String @id @default(cuid())
  busId         String
  routeId       String
  operatorId    String
  boardingPoint String
  droppingPoint String

  departureTime DateTime
  arrivalTime   DateTime
  price         Decimal  @db.Decimal(10, 2)

  status       TripStatus @default(SCHEDULED)
  cancelledAt  DateTime?
  cancelReason String?
  cancelledBy  String?

  bus      Bus      @relation(fields: [busId], references: [id], onDelete: Restrict)
  route    Route    @relation(fields: [routeId], references: [id], onDelete: Restrict)
  operator Operator @relation(fields: [operatorId], references: [id])

  bookings     Booking[]
  bookingSeats BookingSeat[]

  createdById String?
  updatedById String?
  createdBy   User?   @relation("TripCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?   @relation("TripUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([routeId, busId, departureTime])
  @@index([busId])
  @@index([routeId])
  @@index([operatorId])
  @@index([departureTime])
  @@index([status, departureTime])
  @@index([createdById])
  @@index([updatedById])
}

//////////////////////////////////////////////////////
// SEAT
//////////////////////////////////////////////////////

model Seat {
  id         String @id @default(cuid())
  busId      String
  seatNumber String

  rowNumber    Int?
  columnNumber Int?

  bus          Bus           @relation(fields: [busId], references: [id], onDelete: Cascade)
  bookingSeats BookingSeat[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([busId, seatNumber])
}

//////////////////////////////////////////////////////
// BOOKING
//////////////////////////////////////////////////////

model Booking {
  id               String @id @default(cuid())
  bookingReference String @unique

  userId     String
  tripId     String
  operatorId String

  boardingPointId String?
  droppingPointId String?

  passengerName  String
  passengerPhone String

  totalAmount Decimal @db.Decimal(10, 2)

  paymentExpiresAt DateTime?

  status         BookingStatus @default(PENDING)
  bookingSource  String        @default("USER_BOOKING")
  discountType   String?
  discountValue  Decimal?      @db.Decimal(10, 2)
  discountAmount Decimal?      @db.Decimal(10, 2)
  finalAmount    Decimal?      @db.Decimal(10, 2)
  refundAmount   Decimal?      @db.Decimal(10, 2)
  cancelledAt    DateTime?
  cancelReason   String?
  cancelledBy    String?

  user     User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  trip     Trip     @relation(fields: [tripId], references: [id], onDelete: Cascade)
  operator Operator @relation(fields: [operatorId], references: [id])
  boardingPoint BoardingPoint? @relation(fields: [boardingPointId], references: [id], onDelete: Restrict)
  droppingPoint DroppingPoint? @relation(fields: [droppingPointId], references: [id], onDelete: Restrict)

  bookingSeats BookingSeat[]
  payments     Payment[]
  refunds      Refund[]

  createdById String?
  updatedById String?
  createdBy   User?   @relation("BookingCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?   @relation("BookingUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([userId])
  @@index([operatorId])
  @@index([tripId])
  @@index([boardingPointId])
  @@index([droppingPointId])
  @@index([status])
  @@index([createdById])
  @@index([updatedById])
}

//////////////////////////////////////////////////////
// BOOKING SEAT (CRITICAL)
//////////////////////////////////////////////////////

model BookingSeat {
  id String @id @default(cuid())

  bookingId String?
  tripId    String
  seatId    String

  price          Decimal           @db.Decimal(10, 2)
  status         BookingSeatStatus @default(LOCKED)
  lockExpiresAt  DateTime?
  lockedByUserId String?

  booking      Booking? @relation(fields: [bookingId], references: [id], onDelete: Cascade)
  trip         Trip     @relation(fields: [tripId], references: [id], onDelete: Cascade)
  seat         Seat     @relation(fields: [seatId], references: [id], onDelete: Restrict)
  lockedByUser User?    @relation("BookingSeatLockedBy", fields: [lockedByUserId], references: [id], onDelete: SetNull)

  createdAt DateTime @default(now())

  @@unique([tripId, seatId])
  @@index([tripId, lockedByUserId])
}

//////////////////////////////////////////////////////
// PAYMENT
//////////////////////////////////////////////////////

model Payment {
  id String @id @default(cuid())

  bookingId  String
  userId     String
  operatorId String

  amount       Decimal       @db.Decimal(10, 2)
  method       PaymentMethod
  status       PaymentStatus @default(PENDING)
  refundAmount Decimal?      @db.Decimal(10, 2)
  refundStatus String?

  transactionId String? @unique
  valId         String?
  bankTranId    String?

  booking  Booking  @relation(fields: [bookingId], references: [id], onDelete: Cascade)
  user     User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  operator Operator @relation(fields: [operatorId], references: [id])

  refunds Refund[]

  createdById String?
  updatedById String?
  createdBy   User?   @relation("PaymentCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?   @relation("PaymentUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  @@index([bookingId])
  @@index([operatorId])
  @@index([status])
  @@index([createdById])
  @@index([updatedById])
}

//////////////////////////////////////////////////////
// REFUND
//////////////////////////////////////////////////////

model Refund {
  id String @id @default(cuid())

  bookingId  String
  paymentId  String?
  userId     String
  operatorId String

  reason      String
  amount      Decimal      @db.Decimal(10, 2)
  status      RefundStatus @default(PENDING)
  processedAt DateTime?
  processedBy String?
  adminNote   String?

  bankTranId       String?
  sslRefundRefId   String?
  refundTransId    String? @unique
  sslGatewayStatus String?
  sslRawResponse   Json?

  booking  Booking  @relation(fields: [bookingId], references: [id], onDelete: Cascade)
  payment  Payment? @relation(fields: [paymentId], references: [id], onDelete: SetNull)
  user     User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  operator Operator @relation(fields: [operatorId], references: [id])

  createdById String?
  updatedById String?
  createdBy   User?   @relation("RefundCreatedBy", fields: [createdById], references: [id], onDelete: SetNull)
  updatedBy   User?   @relation("RefundUpdatedBy", fields: [updatedById], references: [id], onDelete: SetNull)

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  @@index([bookingId])
  @@index([operatorId])
  @@index([status])
  @@index([createdById])
  @@index([updatedById])
}
